// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getUserinfoController should resolve ACCESSIBILITY 1`] = `
{
  "body": {
    "active": true,
    "email": "email",
    "emailVerified": true,
    "preferredAccessibility": [
      "setting1",
      "setting2",
      "setting3",
    ],
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
  },
}
`;

exports[`getUserinfoController should resolve ADDRESS 1`] = `
{
  "body": {
    "active": true,
    "address": "getAddress",
    "email": "email",
    "emailVerified": true,
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
  },
}
`;

exports[`getUserinfoController should resolve CONNECTED_PROVIDERS 1`] = `
{
  "body": {
    "active": true,
    "connectedProviders": [
      "provider",
    ],
    "email": "email",
    "emailVerified": true,
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
  },
}
`;

exports[`getUserinfoController should resolve EMAIL 1`] = `
{
  "body": {
    "active": true,
    "email": "email",
    "emailVerified": true,
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
  },
}
`;

exports[`getUserinfoController should resolve NATIONAL_IDENTITY_NUMBER 1`] = `
{
  "body": {
    "active": true,
    "email": "email",
    "emailVerified": true,
    "nationalIdentityNumber": "619492152033",
    "nationalIdentityNumberVerified": true,
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
  },
}
`;

exports[`getUserinfoController should resolve PHONE 1`] = `
{
  "body": {
    "active": true,
    "email": "email",
    "emailVerified": true,
    "phoneNumber": "phone",
    "phoneNumberVerified": false,
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
  },
}
`;

exports[`getUserinfoController should resolve PROFILE 1`] = `
{
  "body": {
    "active": true,
    "birthDate": "2000-01-01",
    "email": "email",
    "emailVerified": true,
    "familyName": "Torsson",
    "gender": "Female",
    "givenName": "Oliver",
    "locale": "sv-SE",
    "middleName": "Rio",
    "name": "getName",
    "nickname": "Wheat",
    "picture": "https://picture.url/",
    "preferredUsername": "rio_wheat",
    "profile": "https://profile.url/",
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "takenName": "Olivia",
    "updatedAt": 1596873600,
    "website": "https://website.url/",
    "zoneInfo": "Europe/Stockholm",
  },
}
`;

exports[`getUserinfoController should resolve PUBLIC 1`] = `
{
  "body": {
    "active": true,
    "displayName": "getDisplayName",
    "email": "email",
    "emailVerified": true,
    "gravatarUri": "https://gravatar.url/",
    "pronouns": "she/her",
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
  },
}
`;

exports[`getUserinfoController should resolve SOCIAL_SECURITY_NUMBER 1`] = `
{
  "body": {
    "active": true,
    "email": "email",
    "emailVerified": true,
    "socialSecurityNumber": "279708557743",
    "socialSecurityNumberVerified": true,
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
  },
}
`;

exports[`getUserinfoController should resolve USERNAME 1`] = `
{
  "body": {
    "active": true,
    "email": "email",
    "emailVerified": true,
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
    "username": "bFp3ihd84Ps8Ocjf",
  },
}
`;

exports[`getUserinfoController should resolve with basic userinfo 1`] = `
{
  "body": {
    "active": true,
    "email": "email",
    "emailVerified": true,
    "sub": "785ca3ef-c68b-4db9-a4a5-9fbbd9fca40f",
    "updatedAt": 1596873600,
  },
}
`;
